--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="wrapper">
           <div class="class-price">
             <img src="icon-ethereum.svg" alt="" class="card-icon" />
-            <span>0.041 ETH</span>
+            <span class="eth">0.041 ETH</span>
           </div>
           <div class="card-countdown">
             <img src="icon-clock.svg" alt="" class="card-icon" />
