--- a/index.html
+++ b/index.html
@@ -17,21 +17,55 @@
     <div class="card">
       <div class="card-head">
         <div class="card-product">
-          <img src="image-equilibrium.jpg" alt="" />
+          <img src="first.png" alt="" />
         </div>
       </div>
 
       <div class="card-body">
         <a href="#" class="card-title">
-          <h3>Equilibrium #3429</h3>
+          <h3>NeoTokyo #1046</h3>
         </a>
         <p class="card-text">
-          Our Equilibrium collection promotes balance and calm.
+          Our NeoTokyo collection promotes action and chaos.
         </p>
         <div class="wrapper">
           <div class="class-price">
             <img src="icon-ethereum.svg" alt="" class="card-icon" />
-            <span class="eth">0.041 ETH</span>
+            <span class="eth">15.569 ETH</span>
+          </div>
+          <div class="card-countdown">
+            <img src="icon-clock.svg" alt="" class="card-icon" />
+            <span>21 hours left</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-footer">
+        <img src="image-avatar.png" alt="" class="card-author-img" />
+        <p class="card-author-name">
+          Creation of <a href="#"> Suraj Singh </a>
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-head">
+        <div class="card-product">
+          <img src="second.png" alt="" />
+        </div>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-title">
+          <h3>NeoTokyo #3529</h3>
+        </a>
+        <p class="card-text">
+          Our NeoTokyo collection promotes action and chaos.
+        </p>
+        <div class="wrapper">
+          <div class="class-price">
+            <img src="icon-ethereum.svg" alt="" class="card-icon" />
+            <span class="eth">17.031 ETH</span>
           </div>
           <div class="card-countdown">
             <img src="icon-clock.svg" alt="" class="card-icon" />
@@ -43,7 +77,41 @@
       <div class="card-footer">
         <img src="image-avatar.png" alt="" class="card-author-img" />
         <p class="card-author-name">
-          Creation of <a href="#"> Jules Wyern </a>
+          Creation of <a href="#"> Suraj Singh </a>
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-head">
+        <div class="card-product">
+          <img src="third.png" alt="" />
+        </div>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-title">
+          <h3>NeoTokyo #2249</h3>
+        </a>
+        <p class="card-text">
+          Our NeoTokyo collection promotes action and chaos.
+        </p>
+        <div class="wrapper">
+          <div class="class-price">
+            <img src="icon-ethereum.svg" alt="" class="card-icon" />
+            <span class="eth">35.420 ETH</span>
+          </div>
+          <div class="card-countdown">
+            <img src="icon-clock.svg" alt="" class="card-icon" />
+            <span>10 days left</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-footer">
+        <img src="image-avatar.png" alt="" class="card-author-img" />
+        <p class="card-author-name">
+          Creation of <a href="#"> Suraj Singh </a>
         </p>
       </div>
     </div>
